// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoControls tests should match snapshot with highlights 1`] = `
<div
  className="VideoControls-ControlsWrapper-0-1-1 VideoControls-ControlsWrapperActive-0-1-2"
>
  <button
    className="PlayPause-Button-0-1-4"
    onClick={[Function]}
    type="button"
  />
  <div
    className="VideoControls-Controls-0-1-3"
  >
    <div
      className="Timeline-Timeline-0-1-5"
    >
      <div
        className="Timeline-Track-0-1-6"
      />
      <div
        className="Timeline-Pointer-0-1-7"
        style={
          Object {
            "left": "30%",
          }
        }
      />
      <div
        className="Highlight-Highlight-0-1-8"
        style={
          Object {
            "left": "100%",
          }
        }
      >
        <button
          className="Highlight-Pointer-0-1-9"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        />
        <div
          className="Highlight-CaptionHolder-0-1-10"
        >
          <p>
            Lorem ipsum
          </p>
        </div>
      </div>
      <div
        className="Highlight-Highlight-0-1-8"
        style={
          Object {
            "left": "200%",
          }
        }
      >
        <button
          className="Highlight-Pointer-0-1-9"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        />
        <div
          className="Highlight-CaptionHolder-0-1-10"
        >
          <img
            alt=""
            src="https://www.fillmurray.com/300/200"
          />
          <p>
            Dolor sit
          </p>
        </div>
      </div>
    </div>
    <button
      className="GenericButton-GenericButton-0-1-12"
      onClick={[Function]}
      type="button"
    />
  </div>
</div>
`;

exports[`VideoControls tests should match snapshot without highlights 1`] = `
<div
  className="VideoControls-ControlsWrapper-0-1-1 VideoControls-ControlsWrapperActive-0-1-2"
>
  <button
    className="PlayPause-Button-0-1-4"
    onClick={[Function]}
    type="button"
  />
  <div
    className="VideoControls-Controls-0-1-3"
  >
    <div
      className="Timeline-Timeline-0-1-5"
    >
      <div
        className="Timeline-Track-0-1-6"
      />
      <div
        className="Timeline-Pointer-0-1-7"
        style={
          Object {
            "left": "30%",
          }
        }
      />
    </div>
    <button
      className="GenericButton-GenericButton-0-1-12"
      onClick={[Function]}
      type="button"
    />
  </div>
</div>
`;
